style add img wrapper to prevent card images to be too big

--- a/public/css/modules/card.scss
+++ b/public/css/modules/card.scss
@@ -70,3 +70,11 @@
   /*opacity: 0;*/
 }
 
+.wrap-img-card {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items:center;
+  overflow:hidden;
+}
+
