--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1288,6 +1288,14 @@ body.dark {
   /*opacity: 0;*/
 }
 
+.wrap-img-card {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
 .footer-links > a:first-child {
   display: inline-block;
   margin-bottom: 2rem;
